2009-09-04  Jie Zhang  <jie.zhang@analog.com>

	* gas/bfin/arithmetic.s, gas/bfin/arithmetic.d: Add check
	for (IU) option for multiply and multiply-accumulate to
	data register instructon.

2009-09-03  Jie Zhang  <jie.zhang@analog.com>

	* gas/bfin/parallel5.s: New test.
	* gas/bfin/error.exp: New test.

2009-09-03  Jie Zhang  <jie.zhang@analog.com>

	* gas/bfin/line_number.l, gas/bfin/line_number.s: New test.
	* gas/bfin/bfin.exp: Add the new test.

2009-09-03  Jie Zhang  <jie.zhang@analog.com>

	* gas/bfin/expected_move_errors.s,
	gas/bfin/expected_move_errors.l: Add "LC1 = I0;".
	* gas/bfin/move.s, gas/bfin/move.d: Remove "CYCLES = A0.W".

2009-09-03  Jie Zhang  <jie.zhang@analog.com>

	* gas/bfin/expected_comparison_errors.l: Expect error on Line 13.

2009-09-03  Jie Zhang  <jie.zhang@analog.com>

	* gas/bfin/loop.s, gas/bfin/loop.d: New test.
	* gas/bfin/loop2.s, gas/bfin/loop2.d: New test.
	* gas/bfin/loop3.s, gas/bfin/loop3.d: New test.
	* gas/bfin/bfin.exp: Add the new tests.

2009-09-02  Jie Zhang  <jie.zhang@analog.com>

	From  Bernd Schmidt  <bernd.schmidt@analog.com>
	* gas/bfin/expected_errors.l, gas/bfin/expected_errors.s:
	Check error messages for invalid load/store insns.

2009-09-01  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/att-regs.s: Add ymm tests for 16bit and 64bit.
	* gas/i386/intel-regs.s: Likewise.

	* gas/i386/att-regs.d: Updated.
	* gas/i386/intel-regs.d: Likewise.

2009-09-01  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/att-regs.s: Remove a tab.

2009-09-01  Jie Zhang  <jie.zhang@analog.com>

	* gas/bfin/expected_comparison_errors.s: Add more cases.
	* gas/bfin/expected_comparison_errors.l: Update accordingly.

2009-09-01  Jie Zhang  <jie.zhang@analog.com>

	* gas/bfin/stack2.s: Add pop multiple instruction with a label
	on the same line.
	* gas/bfin/stack2.d: Adjust accordingly.

2009-08-31  Jan Beulich  <jbeulich@novell.com>

	* gas/elf/section5.l: Remove no longer issued warning pattern.
